testData/org/elixir_lang/inspection/keywords_not_at_end_test_case/ParenthesesWithMatchedCallOperationInMiddle.ex
one.(
  one,
  two positional, <error descr="Keywords appear before the end of list.  Move keywords after positional arguments.">key: value</error>,
  three
)